# nexus

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/lifter/: arm64_lifter.cpp  arm64_lifter.hpp  disasm.cpp  disasm.hpp
src/vm/: anti_analysis.hpp  bytecode.cpp  bytecode.hpp  decrypt.cpp  decrypt.hpp  interpreter.cpp  interpreter.hpp  transform.cpp  transform.hpp
